// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutputPane matches snapshot 1`] = `
<div
  className="outputpane"
>
  <Connect(OutputIframe)
    isPublic={false}
    lastRelevantDeltaId={1}
    selectedWfModuleId={987}
    visible={false}
    workflowId={123}
  />
  <TableView
    api={Object {}}
    isReadOnly={false}
    lastRelevantDeltaId={1}
    selectedWfModuleId={987}
    showColumnLetter={false}
  />
</div>
`;

exports[`OutputPane renders when no module id 1`] = `
<div
  className="outputpane"
>
  <Connect(OutputIframe)
    isPublic={false}
    lastRelevantDeltaId={1}
    selectedWfModuleId={null}
    visible={false}
    workflowId={123}
  />
  <TableView
    api={Object {}}
    isReadOnly={false}
    lastRelevantDeltaId={1}
    selectedWfModuleId={null}
    showColumnLetter={false}
  />
</div>
`;
